--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="las mejores lamparas de lava de argentina con envio a todo el pais al mejor precio">
+    <meta name="keywords"  content="LAMPARAS, ILUMINACION, LAVA, LED, CHILLOUT, DECO, DECORACION, CALM, MEDITACION">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
@@ -69,15 +71,27 @@
             <br>
              un toque de distinción y sofisticación
         </p>
-        <section id="photo-grid-container">
-            <div class = "photo-grid">
-                    <div class="photo-grid-item"><img src="images/1.png"></div>
-                    <div class="photo-grid-item"><img src="images/2.png"></div>
-                    <div class="photo-grid-item"><img src="images/3.png"></div>
-                    <div class="photo-grid-item"><img src="images/4.png"></div>
-                    <div class="photo-grid-item"><img src="images/5.png"></div> 
+        <div id="carouselExampleControls" class="carousel slide col-md-2 container" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-20" src="images/1.png" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-20" src="images/2.png" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-20" src="images/3.png" alt="Third slide">
+                  </div>
             </div>
-        </section>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </section>
 
     <!-- seccion prensa -->
@@ -96,6 +110,9 @@
         <a href="https://www.instagram.com/"><i class="fa fa-instagram" style="font-size:36px; color: green;"></i> </a>
         <a href="https://www.facebook.com/"><i class="fa fa-facebook" style="font-size:36px; color: green;"></i> </a>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 </body>
 </html>
